--- a/index.html
+++ b/index.html
@@ -2228,14 +2228,15 @@ vertical-align: -.125em;
 </ul></li>
 <li><p><label><input type="checkbox">Configure the repository to publish a webpage using GitHub pages</label></p>
 <ul>
-<li><a href="https://cd-public.github.io/scicom/A2_pages.html">How to create GitHub Pages</a></li>
+<li><p><a href="https://cd-public.github.io/scicom/A2_pages.html">How to create GitHub Pages</a></p>
+<p>OR</p></li>
+<li><p>Use the provided .github/workflows/static.yml to publish your index.html as a webpage.</p></li>
 </ul></li>
 <li><p><label><input type="checkbox">Create a Quarto webpage file providing a solution.</label></p>
 <ul>
 <li><p><a href="https://cd-public.github.io/scicom/0E_quarto.html">Quarto Lecture</a></p></li>
 <li><p><label><input type="checkbox">Write Quarto (.qmd) file and save it on GitHub and name it index.qmd for ease of use.</label></p></li>
 <li><p><label><input type="checkbox">Use quarto render to create an index.html file.</label></p></li>
-<li><p><label><input type="checkbox">Use the provided .github/workflows/static.yml to publish your index.html as a webpage.</label></p></li>
 </ul></li>
 <li><p><label><input type="checkbox">Include Matplotlib graphics illustrating your solution.</label></p>
 <ul>
